[project]
name = "memory-topic-labeler"
version = "0.1.0"
description = "Topic labeling and semantic memory processing utilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bertopic>=0.17.4",
    "hdbscan>=0.8.44",
    "numpy>=2.4.6",
    "scikit-learn>=1.9.0",
    "umap-learn>=0.5.12",
]

[project.scripts]
memory-topic-map-export = "memory_topic_labeler.cli.map_export:main"
memory-topic-labeler = "memory_topic_labeler.cli.main:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
